# external-prompt-protocol

./: .gitignore  ANNOUNCEMENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
cli/: __init__.py  main.py
docs/: EPP-v1.1-PLAN.md  quickstart.md  solana-transport.md  spec.md  threat-model.md
epp/: __init__.py  capabilities.py  models.py  payment.py  provenance.py
epp/crypto/: __init__.py  integrity.py  keys.py  signing.py
epp/executors/: __init__.py  base.py  command.py  file_queue.py  logger.py  noop.py
epp/inbox/: __init__.py  processor.py  server.py
epp/policy/: __init__.py  nonce_registry.py  rate_limiter.py  trust_registry.py
epp/transport/: __init__.py  base.py  http.py  solana.py
examples/: README.md  basic_example.py  medical_network.py  policy_example.py  restaurant_order.py  solana_example.py
examples/full_demo/: 1_setup.py  2_configure_inbox.py  4_coffee_shop_sends.py  5_app_store_sends.py  6_check_queue.py  config.yaml
examples/http_inbox_server/: README.md
examples/qr_code_solana/: 1_vendor_setup.py  2_customer_scans.py  3_vendor_sends.py  4_customer_polls.py  README.md
examples/quickstart/: 3_run_inbox.py
skill/: SKILL.md
tests/: __init__.py  test_capabilities.py  test_integrity.py  test_payment.py  test_provenance.py
tests/unit/: test_crypto.py  test_models.py  test_policy.py
